test/conformance/chainsaw/exceptions/exclude-privilege-escalation/pod-rejected-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-1
  namespace: staging-ns
spec:
  containers:
  - name: busybox1
    image: busybox
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      allowPrivilegeEscalation: true
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: busybox2
    image: busybox
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      allowPrivilegeEscalation: true
      capabilities:
        drop:
        - ALL
